--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all individuals having contr
 
-Opeoluwa Adeyeri <adeyeriopeoluwa05@gmail.com>
-Blessing Nwakwuo <blessingnwakwuo@outlook.com>
+Vincent Agunda <owuorvincent43@gmail.com>
